# Flemme

./: .gitignore  MIGRATION.md  OPTIMISATIONS.md  README.md  SETUP_CHECKLIST.md  WINDOWS_SETUP.md  build-cpu.ps1  build-cuda.ps1  build-release.ps1  download-silero-vad.ps1  download-whisper-model.ps1  download-whisper-q5.ps1  generate-latest-json.ps1  setup-new-machine.ps1
.claude/: settings.local.json
.github/workflows/: release.yml
Context/: ARCHITECTURE.md  README.md  SETUP_GUIDE.md  SPRINT_0_POC.md  cargo_config_template.toml  project_structure.txt  tauri_config_template.json
actions-runner/: .credentials  .credentials_rsaparams  .runner
actions-runner/_work/_PipelineMapping/ay-bell/Flemme/: PipelineFolder.json
actions-runner/_work/_actions/actions/checkout/: v4.completed
actions-runner/_work/_actions/tauri-apps/tauri-action/: v0.completed
actions-runner/_work/_actions/tauri-apps/tauri-action/v0/: CHANGELOG.md  package.json
actions-runner/_work/_actions/tauri-apps/tauri-action/v0/src/: utils.ts
flemme-app/: keys.txt  package-lock.json  package.json
flemme-app/src-tauri/: Cargo.toml  tauri.conf.json
flemme-app/src-tauri/.cargo/: config.toml
flemme-app/src-tauri/capabilities/: default.json
flemme-app/src-tauri/icons/: icon.icns
flemme-app/src-tauri/src/: lib.rs  main.rs
flemme-app/src-tauri/src/audio/: mod.rs  recorder.rs  vad.rs
flemme-app/src-tauri/src/clipboard/: manager.rs  mod.rs
flemme-app/src-tauri/src/config/: mod.rs  settings.rs
flemme-app/src-tauri/src/hotkey/: listener.rs  mod.rs
flemme-app/src-tauri/src/llm/: keyring_manager.rs  mod.rs
flemme-app/src-tauri/src/transcription/: downloader.rs  engine.rs  mod.rs  models.rs  whisper.rs
flemme-app/src/lib/components/: HotkeyCapture.svelte  RecordingIndicator.svelte  Settings.svelte  UpdateChecker.svelte
flemme-app/src/lib/types/: settings.ts
flemme-app/src/routes/: +layout.svelte  +page.svelte
flemme-app/src/routes/indicator/: +page.svelte
