[package]
name = "flemme-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flemme_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
whisper-rs = "0.15"
dirs = "5"
arboard = "3"
enigo = "0.2"
num_cpus = "1"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
debug = true
strip = false
debug-assertions = true
overflow-checks = true

[profile.dev]
opt-level = 2

